# oit_roboclaw_driver

./: CMakeLists.txt  README.md  package.xml
config/: example_1_port_1_boards.yaml  example_1_port_2_boards.yaml  example_2_port_2_boards.yaml  icart_01.yaml  joy_2_wheels_01.yaml  joy_2_wheels_02.yaml  joy_4_wheels_omni_01.yaml  joy_4_wheels_omni_02.yaml  mechanum_2_port_2_boards.yaml  microbot_01.yaml  minibot_01.yaml  omni_1_port_2_boards_02.yaml  omni_2_port_2_boards_02.yaml
launch/: example_1_port_1_boards.launch  example_1_port_2_boards.launch  example_2_port_2_boards.launch  example_2_wheels.launch  example_4_wheels_omni.launch  example_mechanum.launch  icart_01.launch  mechanum_2_port_2_boards.launch  microbot_01.launch  minibot_01.launch  omni_4_wheels_02.launch  teleop_joy_2_wheels.launch  teleop_joy_4_wheels_omni.launch  teleop_joy_4_wheels_omni_02.launch  teleop_joy_mechanum.launch  teleop_joy_minibot_01.launch
scripts/: example01.py  example02_multiunit.py  example02_solo.py  oit_roboclaw_2_wheels.py  oit_roboclaw_4_wheels_omni.py  oit_roboclaw_driver_node.py  oit_roboclaw_mechanum.py
scripts/oit/roboclaw/: cmd.py  constants.py  device_conf.py  device_map.py  driver.py  encoder_odom_2_wheels.py  encoder_odom_4_wheels_omni.py  encoder_odom_base.py  kinematic_parameters.py  utils.py
